CSS: Fix contrast
- FBFBFB as main bg
- Move from gray-600 to gray-700
- Darken links
- Increase font size

--- a/css/mint.css
+++ b/css/mint.css
@@ -63,13 +63,13 @@ code {
 }
 
 .sponsor {
-    background: #ffffff;
+    background: #fbfbfb;
     margin: 20px;
     padding: 10px;
 }
 
 .community-sponsor {
-    background: #ffffff;
+    background: #fbfbfb;
     margin: 10px;
     padding: 5px;
 }
